load tuning, SEO, and font availability scripts

--- a/site/interactions/input_clear.html
+++ b/site/interactions/input_clear.html
@@ -3,24 +3,28 @@
   <head>
     <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-<title>Uranium JS | Input Clear</title>
+<title>Input Clear | Uranium Declarative Javascript Interaction Library</title>
+<meta name="keywords" content="Uranium Input Clear page, declarative javascript interactions, declarative javascript library, declarative javascript, javascript interactions, javascript widgets, javascript library, open source, javascript, interactions, widgets, jquery" />
+<meta name="description" content="The Input Clear page for Uranium, a declarative Javascript library that lets web page author add convenient interactions such as carousels, togglers, tabs, and geolocation to their pages without writing a single line of Javascript." />
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
-<script src="/src/jquery-1.9.1.min.js"></script>
-<script src="/src/jquery.uranium.js"></script>
-
 <script type="text/javascript">
-
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-26739163-2']);
   _gaq.push(['_trackPageview']);
-
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
+</script>
+<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Open Sans', 'Crete Round', 'Ultra']
+    }
+  });
 </script>
 
     <link href="/stylesheets/jasmine.css" rel="stylesheet" />
@@ -157,9 +161,8 @@
       
     </div>
     <footer id="footer">
-  <span>Brought to you by&hellip;</span>
-  <br />
-  <a id="moovweblogo" href="http://www.moovweb.com/"><img src="/images/moovweblogo.png" alt="Moovweb" /></a>
+  <div><span>Brought to you by&hellip;</span></div>
+  <a id="moovweblogo" href="http://www.moovweb.com/" target="_blank"><img src="/images/moovweblogo.png" alt="Moovweb" /></a>
   <nav>
     Uranium &copy; 2013 |
     <a href="/about.html">About</a> |
@@ -167,6 +170,8 @@
     <a href="mailto:uranium@moovweb.com">Contact</a>
   </nav>
 </footer>
+<script src="/src/jquery-1.9.1.min.js"></script>
+<script src="/src/jquery.uranium.js"></script>
 
   </body>
 </html>
