remove redundant fonts, enhance keywords, typo fix

--- a/site/widgets/lateload.html
+++ b/site/widgets/lateload.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 <title>Late Load | Uranium Declarative Javascript Interaction Library</title>
-<meta name="keywords" content="Uranium Late Load page, declarative javascript interactions, declarative javascript library, declarative javascript, javascript interactions, javascript widgets, javascript library, open source, javascript, interactions, widgets, jquery" />
-<meta name="description" content="The Late Load page for Uranium, a declarative Javascript library that lets web page author add convenient interactions such as carousels, togglers, tabs, and geolocation to their pages without writing a single line of Javascript." />
-<link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
+<meta name="keywords" content="Uranium Late Load page, declarative javascript interactions, declarative javascript library, declarative javascript, javascript interactions, javascript widgets, javascript library, open source, Uranium Late Load, javascript, interactions, widgets, jquery" />
+<meta name="description" content="The Late Load page for Uranium, a declarative Javascript library that lets web page authors add convenient interactions such as carousels, togglers, tabs, and geolocation to their pages without writing a single line of Javascript." />
 <link href="/stylesheets/main.css" rel="stylesheet" />
 <script type="text/javascript">
   var _gaq = _gaq || [];
@@ -22,12 +21,11 @@
 <script>
   WebFont.load({
     google: {
-      families: ['Open Sans', 'Crete Round', 'Ultra']
+      families: ['Open Sans:300,300italic,400', 'Crete Round:400italic', 'Ultra', 'Yellowtail']
     }
   });
 </script>
 
-    <link href="/stylesheets/jasmine.css" rel="stylesheet" />
   </head>
   
   <body id="lateload_page" class="widget_page">
