--- a/download.html
+++ b/download.html
@@ -14,11 +14,11 @@ download_selected: selected
   <p>Right-click on the appropriate file from the choices below, save it, then add it to your project.</p>
   <p>(Remember that you will also need to include <a href="//jquery.com/" target="_blank">jQuery</a> version 1.9.1 or greater in any page where you will be using Uranium interactions.)</p>
   <div id="links">
-    <a href="http://d1topzp4nao5hp.cloudfront.net/uranium-upload/{{version}}/uranium.js" target="_blank">
+    <a href="http://downloads.moovweb.com/uranium/{{version}}/uranium.js" target="_blank">
       <h4 class="link-header">Uranium {{version}}</h4><p>Minified</p>
     </a>
 
-    <a href="http://d1topzp4nao5hp.cloudfront.net/uranium-upload/{{version}}/uranium-pretty.js" target="_blank">
+    <a href="http://downloads.moovweb.com/uranium/{{version}}/uranium-pretty.js" target="_blank">
       <h4 class="link-header">Uranium {{version}}</h4><p>Full Source</p>
     </a>
 
