document drawer and carousel count template

--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -47,8 +47,11 @@ advanced_tab:
         - "required: <code>data-ur-carousel-button-type:\"next\"/\"prev\"</code> for the next and previous buttons, respectively</li>"
     count:
       - gives an indicator of the position of the carousel, in the form "1 of 8", etc.
+      - to change the count template, add an optional <code>data-ur-template</code> attribute to this element with a value of 
       - "multiple?: false"
       - "state: N/A"
+      - attributes :
+        - "optional: <code>data-ur-template</code>: '&#123;&#123;index&#125;&#125; out of &#123;&#123;count&#125;&#125;' (defaults to '1 of 8' format if not specified)</li>"
     dots:
       - "gives a container that changes <code>data-ur-state</code> on the corresponding child"
       - "multiple?: false"
@@ -164,14 +167,14 @@ advanced_tab:
       <h3>Infinite Scrolling</h3>
 
       <p>
-        Here we have a carousel that loops from front to back. (Default state for carousel.) The carousel also has indicator dots showing what item is currently selected. The indicator dots have a data-ur-state of "inactive" until the corresponding item is selected, when the data-ur-state changes to "active" – you can use this for styling the dots.
+        Here we have a carousel that loops from front to back. (Default state for carousel.) The carousel also has a custom count template, and indicator dots showing what item is currently selected. The indicator dots have a data-ur-state of "inactive" until the corresponding item is selected, when the data-ur-state changes to "active" – you can use this for styling the dots.
       </p>
       <ul>
         <li><span class="inline_code">data-ur-carousel-component="dots"</span> - should be within the set</li>
       </ul>
       <div data-ur-set="carousel" data-ur-infinite="enabled">
         <div data-ur-carousel-component="dots"></div>
-        <span data-ur-carousel-component="count"> -- count -- </span>
+        <span data-ur-carousel-component="count" data-ur-template="&#123;&#123;index&#125;&#125;/&#123;&#123;count&#125;&#125;"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
         <div data-ur-carousel-component="scroll_container">
