--- a/interactions/toggler.html
+++ b/interactions/toggler.html
@@ -15,11 +15,17 @@ advanced_tab:
     button:
       - add this attribute to the button (i.e. the thing to be clicked)
       - "multiple?: false"
-      - "state: enabled / disabled(default)"
+      - "state: enabled / disabled (default)"
     content:
       - add this attribute to each content item
       - "multiple?: true"
-      - "state: enabled / disabled(default)"
+      - "state: enabled / disabled (default)"
+  Optional:
+    drawer:
+      - enables sliding menus for togglers on the body element
+      - sample implementation uses custom Webkit-specific flexbox CSS for recommended functionality
+      - "multiple?: false"
+      - "state: enabled / disabled (default)"
 ---
 
 <!-- Demonstration -->
@@ -161,7 +167,16 @@ advanced_tab:
 
     </div><!-- end of nesting -->
   </div>
+  <hr>
 
+  <!-- More Examples -->
+  <div class="wrapper">
+    <h2>Toggler Drawer Example</h2>
+    <h3><a href="{{site.url}}drawer.html" target="_blank">Demonstrates styling and formatting for a horizontal sliding menu</a></h3>
+    <p>Note: This example uses Webkit-specific CSS to activate the visual drawer behavior, but the Uranium behavior is the same across all browsers, and you may implement the visual effects any way you prefer.</p>
+  </div>
+
+  <hr />
 
 </div>
 
