--- a/site/interactions/drawer.html
+++ b/site/interactions/drawer.html
@@ -4,11 +4,12 @@
   <meta charset="us-ascii">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <script src="/src/jquery-1.9.1.min.js"></script>
-  <script src="/src/jquery.uranium.js"></script>
   <style>
   [data-ur-toggler-component="content"]:not([data-ur-state="enabled"]) {
     display: none;
+  }
+  [data-ur-toggler-component="button"] {
+    cursor: pointer;
   }
   body {
     margin: 0;
@@ -198,20 +199,51 @@
     </div>
   </div>
   <div id="page">
-    <header data-ur-toggler-component="button">Menu</header>
+    <header id="menuElement" data-ur-toggler-component="button">Menu</header>
     <h2>Click the Menu above to try the drawer toggle</h2>
     <p>The CSS that this page uses as a demonstration is specific to Webkit browsers such as Chrome and Safari, but you may implement your drawer using any styling you choose.</p>
     <p>The options below demonstrate ways that you might want to change the behavior of the drawer toggle by adding classes to the body element of the page, which are targeted by the custom CSS.</p>
-    <ul>
-      <li><a href="javascript:void(0)" onclick="$('body').toggleClass('static')">Toggle static drawer</a></li>
-      <li><a href="javascript:void(0)" onclick="$('body').toggleClass('width')">Toggle fixed drawer width</a></li>
-      <li><a href="javascript:void(0)" onclick="$('body').toggleClass('scroll')">Toggle scrollable drawer, fixed page</a></li>
-      <li><a href="javascript:void(0)" onclick="$('body').toggleClass('right')">Drawer on right</a></li>
+    <ul id="menuStateTogglers">
+      <li><a id="makeStatic" href="javascript:void(0)">Toggle static drawer</a></li>
+      <li><a id="makeWide" href="javascript:void(0)">Toggle fixed drawer width</a></li>
+      <li><a id="makeScroll" href="javascript:void(0)">Toggle scrollable drawer, fixed page</a></li>
+      <li><a id="makeRight" href="javascript:void(0)">Toggle Drawer on right</a></li>
     </ul>
     <p>The particular classes being applied to the body element are just being used as an example, as is the ability to turn them on and off with Javascript. You may write your drawer page using any classes or attributes you choose, and target them with any CSS that suits your needs.</p>
     <div id="mask" data-ur-toggler-component="button"></div>
   </div>
   </div>
+  <script src="/src/jquery-1.9.1.min.js"></script>
+  <script src="/src/jquery.uranium.js"></script>
+  <script>
+    $(function() {
+      var $menuElement = $("#menuElement");
+      var $bodyElement = $("body");
+      var selectedState = "";
+      var menuState = "";
+
+      $("#menuStateTogglers").on("click", "a", function(e) {
+        e.preventDefault();
+        selectedState = $(e.target).attr("id");
+        switch(selectedState) {
+          case 'makeStatic':
+            $bodyElement.toggleClass("static");
+            break;
+          case 'makeWide':
+            $bodyElement.toggleClass("width");
+            break;
+          case 'makeScroll':
+            $bodyElement.toggleClass("scroll");
+            break;
+          case 'makeRight':
+            $bodyElement.toggleClass("right");
+            break;
+        }
+        menuState = ($bodyElement.attr('class').length != 0) ? " (" + $bodyElement.attr('class') + ")" : "";
+        $menuElement.text("Menu" + menuState);
+      });
+    });
+  </script>
 </body>
 </html>
 
