Adding a page for the validator widget

--- a/site/documentation/styling.html
+++ b/site/documentation/styling.html
@@ -97,6 +97,7 @@
 </footer>
 <script src="/src/jquery-1.9.1.min.js"></script>
 <script src="/src/jquery.uranium.js"></script>
+<script src="/src/cc_valid_ur.js"></script>
 
   </body>
 </html>
