update documentation for Uranium 1.0.147

--- a/documentation/philosophy.html
+++ b/documentation/philosophy.html
@@ -10,7 +10,7 @@ more_selected: selected
     <div id="philosophy">
       <h2>Uranium is lightweight</h2>
       <p>Uranium is less than 7KB when zipped. This makes it perfect for mobile devices, where minimizing KB is essential.</p>
-      <p>Uranium was made to work with <a href="http://jquery.com/" target="_blank">jQuery</a>, which is a very popular Javascript library. Many sites already use jQuery, allowing Uranium to integrate easily without adding a lot of extra weight. Uranium endorses the use of jQuery to add robust functionality, and improve cross-browser compatability.</p>
+      <p>Uranium was made to work with <a href="http://jquery.com/" target="_blank">jQuery</a>, which is a very popular Javascript library. Many sites already use jQuery, and Uranium is compatible with jQuery versions as old as 1.3, allowing Uranium to integrate easily without adding a lot of extra weight. Uranium endorses the use of jQuery to add robust functionality, and improve cross-browser compatability.</p>
       <h2>Uranium is easy to use</h2>
       <p>No Javascript knowledge is necessary to use Uranium. (Of course, if you do know Javascript, it allows you to play around with the interactions.) </p>
       <p>That's right: you don't need to touch a single line of Javascript. Uranium uses the 'declarative' Javascript style, a model that looks for how HTML elements are formatted. Then, it constructs all the necessary Javascript magic to make those elements come to life.</p>
