--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -13,12 +13,12 @@ documentation_selected: selected
       <h2>Introduction to Uranium</h2>
       <p>Uranium offers web page authors the ability to add several convenient Javascript interactions to the HTML elements on their pages, without writing a single line of Javascript.</p>
       <p>For example, you might have a page with a set of sub-sections that each have headers followed by related content, one right after the other. With the Uranium toggler interaction, you could transform that into an accordion just by adding a few data attributes to the existing HTML elements.</p>
-      <p>Uranium interactions are not opinionated about styling and layout. You should be able to add the Uranium script and a few data attributes to practically any working web page that uses jQuery, and take advantage of these useful interactions right where you need them most.</p>
+      <p>Uranium interactions are not opinionated about styling and layout. You should be able to add the Uranium script and a few data attributes to practically any working web page that uses jQuery (as far back as version 1.3), and take advantage of these useful interactions right where you need them most.</p>
     </section>
 
     <section id="basic_requirements">
       <h2>Basic Requirements</h2>
-      <p>Since Uranium builds on <a href="//jquery.com" target="_blank">jQuery</a>, the minimum you need to do to get Uranium working on your page is to include the jQuery script followed by the Uranium script. A good place to do this is right before the closing tag for the body element on your HTML document.</p>
+      <p>Since Uranium builds on <a href="//jquery.com" target="_blank">jQuery</a>, the minimum you need to do to get Uranium working on your page is to include the latest jQuery script followed by the Uranium script. A good place to do this is right before the closing tag for the body element on your HTML document.</p>
 {% highlight html %}
 <html>
 <head>
@@ -38,7 +38,7 @@ documentation_selected: selected
   <script src="scripts/jquery.uranium.js"></script>
 </body>
 </html>{% endhighlight %}
-      <p>Just download the minified version of jQuery, and the Uranium script, and save them in your /scripts directory. Then reference them in your HTML document, and you should be good to go.</p>
+      <p>Just download the latest minified version of jQuery, and the Uranium script, and save them in your /scripts directory. Then reference them in your HTML document, and you should be good to go.</p>
     </section>
 
     <section id="data_attributes">
