--- a/site/index.html
+++ b/site/index.html
@@ -47,7 +47,7 @@
     <div id="how_to_use">
       <h4>How to Use:</h4>
       <ol>
-        <li>Include the Uranium library and jQuery</li>
+        <li>Include the Uranium library and jQuery &gt;= 1.3</li>
         <li>Give your HTML pre-defined data attributes</li>
         <li>&hellip; that's it!</li>
       </ol>
