Changing the syntax to reflect new 'required' component (used to be 'notblank')

--- a/interactions/validator.html
+++ b/interactions/validator.html
@@ -29,7 +29,7 @@ advanced_tab:
 
   <div id="validator_interaction" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
   	<div data-ur-set="validator">
-  		<input data-ur-validator-component='notblank' type='text' placeholder="Can't be blank"/>
+  		<input data-ur-validator-component='required' type='text' placeholder="Can't be blank"/>
   	</div>
 
     <div data-ur-set='validator'>
@@ -51,7 +51,7 @@ advanced_tab:
   <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html">
 {% highlight html %}
 <div data-ur-set="validator">
-  <input data-ur-validator-component='notblank'/>
+  <input data-ur-validator-component='required'/>
 </div>
 
 <div data-ur-set='validator'>
