Fixing typo noticed by James

--- a/site/interactions/tabs.html
+++ b/site/interactions/tabs.html
@@ -148,7 +148,7 @@
                   <h4>Optional</h4>
                   <ul>
                     
-                      <code>"date-ur-closeable="</code>
+                      <code>"data-ur-closeable="</code>
                       <ul>
                       
                         <li>
