--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ about_selected: selected
   <p>
     <a href="https://github.com/sjezewski">Sean</a> and <a href="https://github.com/hcatlin">Hampton</a> conceived and architected Uranium, developing the core design and philosophy, while working together at <a href="http://www.moovweb.com/" target="_blank">Moovweb</a>.
   </p>
-  <h3>And Many More...</h3>
+  <h3>And Many More &hellip;</h3>
   <p class="bio"><a href="https://github.com/benbayard">Ben Bayard</a></p>
   <p class="bio"><a href="https://github.com/malrase">Michael Catlin</a></p>
   <p class="bio"><a href="https://github.com/wonja">Wonja Fairbrother</a></p>
