--- a/documentation/getting_started.html
+++ b/documentation/getting_started.html
@@ -30,11 +30,11 @@ documentation_selected: selected
             </div>
      
             <ul data-ur-toggler-component='content'>
-              <li> Hat </li>
-              <li> Socks </li>
-              <li> Shoes </li>
-              <li> Gloves </li>
-              <li> Shirts </li>
+              <li>Hat</li>
+              <li>Socks</li>
+              <li>Shoes</li>
+              <li>Gloves</li>
+              <li>Shirts</li>
             </ul>
           </div> <!--end of toggler-->
           <p>
@@ -46,122 +46,116 @@ documentation_selected: selected
           <p>
             Let's start with the basic, bare-bones HTML: we have a <span class="inline_code">div</span> for "Clothing" and then an unordered list with the items in it.
           </p>
-{% highlight html %}
-<div>
-  Clothing
-<div>
-<ul>
-  <li> Hat </li>
-  <li> Socks </li>
-  <li> Shoes </li>
-  <li> Gloves </li>
-  <li> Shirts </li>
-</ul>
-{% endhighlight %}
+          {% capture tmp %}
+          <div>Clothing</div>
+          <ul>
+            <li>Hat</li>
+            <li>Socks</li>
+            <li>Shoes</li>
+            <li>Gloves</li>
+            <li>Shirts</li>
+          </ul>
+          {% endcapture %}
+          <pre data-lang="html">{{ tmp | xml_escape }}</pre>
           <p>
             The first thing we need to do is wrap the whole toggler in a <span class="inline_code">div</span> with the <span class="inline_code">data-ur-set</span> attribute set as <span class="inline_code">"toggler"</span>. This is basically telling Uranium that the whole thing in the div is a toggler.
           </p>
-{% highlight html %}
-<div data-ur-set="toggler">
-  <div>
-    Clothing
-  <div>
-  <ul>
-    <li> Hat </li>
-    <li> Socks </li>
-    <li> Shoes </li>
-    <li> Gloves </li>
-    <li> Shirts </li>
-  </ul>
-</div>
-{% endhighlight %}
+          {% capture tmp %}
+          <div data-ur-set="toggler">
+            <div>Clothing</div>
+            <ul>
+              <li>Hat</li>
+              <li>Socks</li>
+              <li>Shoes</li>
+              <li>Gloves</li>
+              <li>Shirts</li>
+            </ul>
+          </div>
+          {% endcapture %}
+          <pre data-lang="html">{{ tmp | xml_escape }}</pre>
           <p>
             This may have already caused a problem. What if we can't wrap the whole thing in a <span class="inline_code">div</span>? Well, there's a trick around that - check out the explanation of ids <a href="{{site.url}}grouping.html">here</a>.
           </p>
           <p>
             Next, we indicate where the button is. In our case, we want the button to be the Clothing div. So we give the clothing div the attribute <span class="inline_code">"data-ur-toggler-component"</span> and the value <span class="inline_code">"button"</span>. (Want to know why the attributes are named so? Click <a href="{{site.url}}model.html#naming">here</a>.)
           </p>
-{% highlight html %}
-<div data-ur-set="toggler">
-  <div data-ur-toggler-component="button">
-    Clothing
-  <div>
-  <ul>
-    <li> Hat </li>
-    <li> Socks </li>
-    <li> Shoes </li>
-    <li> Gloves </li>
-    <li> Shirts </li>
-  </ul>
-</div>
-{% endhighlight %}
+          {% capture tmp %}
+          <div data-ur-set="toggler">
+            <div data-ur-toggler-component="button">Clothing</div>
+            <ul>
+              <li>Hat</li>
+              <li>Socks</li>
+              <li>Shoes</li>
+              <li>Gloves</li>
+              <li>Shirts</li>
+            </ul>
+          </div>
+          {% endcapture %}
+          <pre data-lang="html">{{ tmp | xml_escape }}</pre>
           <p>
             The final thing we need to do to this HTML is specify the content bit of the toggler. The content in this case is the unordered list that we want to appear when the button is clicked. We give it the attribute <span class="inline_code">data-ur-toggler-component</span> (the same as for the button, if you remember) - but this time we use the value <span class="inline_code">"content"</span>.
           </p>
-{% highlight html %}
-<div data-ur-set="toggler">
-  <div data-ur-toggler-component="button">
-    Clothing
-  <div>
-  <ul data-ur-toggler-component="content">
-    <li> Hat </li>
-    <li> Socks </li>
-    <li> Shoes </li>
-    <li> Gloves </li>
-    <li> Shirts </li>
-  </ul>
-</div>
-{% endhighlight %}
+          {% capture tmp %}
+          <div data-ur-set="toggler">
+            <div data-ur-toggler-component="button">Clothing</div>
+            <ul data-ur-toggler-component="content">
+              <li>Hat</li>
+              <li>Socks</li>
+              <li>Shoes</li>
+              <li>Gloves</li>
+              <li>Shirts</li>
+            </ul>
+          </div>
+          {% endcapture %}
+          <pre data-lang="html">{{ tmp | xml_escape }}</pre>
           <p>That's all we need to do with regards to HTML.</p>
         </div><!-- tutorial para-->
-        <h3>Second Step: Don't forget the Javascript</h3>
+        <h3>Second Step: Don't forget the JavaScript</h3>
         <div class="tutorial_para">
           <p>We've added all the necessary attributes to the HTML. The next job is to make sure we have Uranium running in the page.</p>
           <p>The Uranium file can be downloaded <a href="download.html">here</a>.</p> Include it in your project folder, and add an appropriate reference to it in the head of the HTML.</p>
         </div>
         <h3>Third Step: Changing the CSS</h3>
         <div class="tutorial_para">
-          <p>Now we've added the Uranium javascript to the page, go back and refresh the site. The moment of truth is upon us. Click on the button!</p>
-          <p>...</p>
+          <p>Now we've added the Uranium JavaScript to the page, go back and refresh the site. The moment of truth is upon us. Click on the button!</p>
+          <p>&hellip;</p>
           <p>
-            Ruh roh. Nothing seems to happen. Why not? Is the javascript broken? Let's check.
+            Ruh roh. Nothing seems to happen. Why not? Is the JavaScript broken? Let's check.
           </p>
           <p>
-            Right-click on your interaction and "inspect element". You'll see the button and the content divs have an extra attribute - <span class="inline_code">data-ur-state</span>. This is, by default, set to <span class="inline_code">"disabled"</span>.
+            Right-click on your interaction and "inspect element". You'll see the button and the content <code>&lt;div&gt;</code>s have an extra attribute <code>data-ur-state</code>. This is, by default, set to <code>"disabled"</code>.
           </p>
-          <samp>
-{% highlight html %}
-<div data-ur-set="toggler" data-ur-id="1" data-ur-state="enabled">
-  <div data-ur-toggler-component="button" data-ur-state="disabled">Clothings</div>
-  <ul data-ur-toggler-component="content" data-ur-state="disabled">...</ul>
-</div>
-{% endhighlight %}
-          </samp>
+          {% capture tmp %}
+          <div data-ur-set="toggler" data-ur-id="1" data-ur-state="enabled">
+            <div data-ur-toggler-component="button" data-ur-state="disabled">Clothings</div>
+            <ul data-ur-toggler-component="content" data-ur-state="disabled">...</ul>
+          </div>
+          {% endcapture %}
+          <pre data-lang="html">{{ tmp | xml_escape }}</pre>
           <p>
-            When the button is clicked, it changes to <span class="inline_code">"enabled"</span>.
+            When the button is clicked, it changes to <code>"enabled"</code>.
           </p>
-          <samp>
-{% highlight html %}
-<div data-ur-set="toggler" data-ur-id="1" data-ur-state="enabled">
-  <div data-ur-toggler-component="button" data-ur-state="enabled">Clothings</div>
-  <ul data-ur-toggler-component="content" data-ur-state="enabled">...</ul>
-</div>
-{% endhighlight %}
-          </samp>
-          <p>The javascript is doing its job. The missing piece of the puzzle is the CSS.</p>
+          {% capture tmp %}
+          <div data-ur-set="toggler" data-ur-id="1" data-ur-state="enabled">
+            <div data-ur-toggler-component="button" data-ur-state="enabled">Clothings</div>
+            <ul data-ur-toggler-component="content" data-ur-state="enabled">...</ul>
+          </div>
+          {% endcapture %}
+          <pre data-lang="html">{{ tmp | xml_escape }}</pre>
+          <p>The JavaScript is doing its job. The missing piece of the puzzle is the CSS.</p>
           <p>
-            What we need to do is change the styling of the page. It needs to be set so that the content does not display when <span class="inline_code">data-ur-state="disabled"</span>, but to display when <span class="inline_code">data-ur-state="enabled"</span>.
+            What we need to do is change the styling of the page. It needs to be set so that the content does not display when <code>data-ur-state="disabled"</code>, but to display when <code>data-ur-state="enabled"</code>.
           </p>
-{% highlight css %}
-[data-ur-toggler-component='content'][data-ur-state='disabled'] {
-  display: none;
-}
-[data-ur-toggler-component='content'][data-ur-state='enabled'] {
-  display: block;
-}
-{% endhighlight %}
+          <pre data-lang="css">
+          [data-ur-toggler-component="content"][data-ur-state="disabled"] {
+            display: none;
+          }
+          [data-ur-toggler-component="content"][data-ur-state="enabled"] {
+            display: block;
+          }
+          </pre>
           <p>
-            (This is actually what we call "explicit" CSS styling. What we're doing is  defining what happens when the data-ur-state is "enabled" and what happens when it is "disabled." This is more robust than lazy styling, which only defines the styles that get applied in the "enabled" state. You can learn <a href="{{site.url}}styling.html">more about lazy vs explicit styling</a> if you're curious.)
+            (This is actually what we call "explicit" CSS styling. What we're doing is  defining what happens when the <code>data-ur-state</code> is "enabled" and what happens when it is "disabled." This is more robust than lazy styling, which only defines the styles that get applied in the "enabled" state. You can learn <a href="{{site.url}}styling.html">more about lazy vs explicit styling</a> if you're curious.)
           </p>
           <p>
             By this point, the interaction should be fully functional. Isn't it neat?
@@ -169,10 +163,10 @@ documentation_selected: selected
         </div> <!-- tutorial para-->
         <h3>Fourth Step: Apply These Skills</h3>
         <div class="tutorial_para""brown">
-          <p>Pretty much all the interactions in Uranium work in a similar way. You add special attributes to the tags in your HTML, import the javascript, and maybe do a little CSS re-styling.
+          <p>Pretty much all the interactions in Uranium work in a similar way. You add special attributes to the tags in your HTML, import the JavaScript, and maybe do a little CSS re-styling.
           </p>
           <p>
-            Now we've whetted your appetite, you probably want to check out some more interactions. If you want to go through another tutorial, we have <a href="./advanced.html">an advanced tutorial</a> that covers how to implement a carousel with some custom features, all without writing a single line of Javascript.</a>.
+            Now we've whetted your appetite, you probably want to check out some more interactions. If you want to go through another tutorial, we have <a href="./advanced.html">an advanced tutorial</a> that covers how to implement a carousel with some custom features, all without writing a single line of JavaScript.
           </p>
         </div> <!-- tutorial para -->
       </div>
