--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -19,7 +19,6 @@ documentation_selected: selected
     <section id="basic_requirements">
       <h2>Basic Requirements</h2>
       <p>Since Uranium builds on <a href="//jquery.com" target="_blank">jQuery</a>, the minimum you need to do to get Uranium working on your page is to include the latest jQuery script followed by the Uranium script. A good place to do this is right before the closing tag for the body element on your HTML document.</p>
-      <pre data-lang="html">
       {% capture tmp %}
       <html>
       <head>
@@ -40,40 +39,43 @@ documentation_selected: selected
       </body>
       </html>
       {% endcapture %}
-      {{ tmp | xml_escape }}
-      </pre>
+      <pre data-lang="html">{{ tmp | xml_escape }}</pre>
       <p>Just download the latest minified version of jQuery, and the Uranium script, and save them in your /scripts directory. Then reference them in your HTML document, and you should be good to go.</p>
     </section>
 
     <section id="data_attributes">
       <h2>Data Attributes</h2>
-      <p>Data attributes can be added to any HTML element. We use data attributes instead of modifying the id or class attributes of HTML elements so that Uranium can be injected into existing pages as easily as it can be added to new pages, without affecting existing styles and Javascript.</p>
-      <p>The syntax is simple. Just add the data attributes the same way you would add any other attributes to an HTML element. For example, to tell Uranium that a specific H2 element should be used as a toggle button to show and hide the following paragraph, you might start with something like this:</p>
-      {% highlight html %}
-<div>
-  <h2>Information</h2>
-  <p>This is content we want to hide and show</h2>
-</div>{% endhighlight %}
-      <p>...and end up with something like this.
-      {% highlight html %}
-<div data-ur-set="toggler">
-  <h2 data-ur-toggler-component="button">Information</h2>
-  <p data-ur-toggler-component="content">This is content we want to hide and show</h2>
-</div>{% endhighlight %}
+      <p>Data attributes can be added to any HTML element. We use data attributes instead of modifying the <code>id</code> or <code>class</code> attributes of HTML elements so that Uranium can be injected into existing pages as easily as it can be added to new pages, without affecting existing styles and Javascript.</p>
+      <p>The syntax is simple. Just add the data attributes the same way you would add any other attributes to an HTML element. For example, to tell Uranium that a specific <code>&lt;h2&gt;</code> element should be used as a toggle button to show and hide the following paragraph, you might start with something like this:</p>
+      {% capture tmp %}
+      <div>
+        <h2>Information</h2>
+        <p>This is content we want to hide and show</p>
+      </div>
+      {% endcapture %}
+      <pre data-lang="html">{{ tmp | xml_escape }}</pre>
+      <p>&hellip; and end up with something like this.</p>
+      {% capture tmp %}
+      <div data-ur-set="toggler">
+        <h2 data-ur-toggler-component="button">Information</h2>
+        <p data-ur-toggler-component="content">This is content we want to hide and show</h2>
+      </div>
+      {% endcapture %}
+      <pre data-lang="html">{{ tmp | xml_escape }}</pre>
       <p>Just adding those data attributes to a page that has jQuery and the Uranium script loaded would enable the desired interaction.
     </section>
 
     <section id="interaction_sets">
       <h2 name="sets">Interaction Sets and Components</h2>
-      <p>Every interaction has at its core a set and a series of components. The set is unique for every interaction: <span class="inline_code">data-ur-set="toggler"</span> for the <a href="/interactions/toggler.html">toggler</a> interaction, etc. The set attribute should be used to wrap the whole interaction.</p>
-      <p>There are usually a few components per interaction. Some may be required to get the interaction to work, but most are usually optional. For example, a toggler has a button and content, and at least one of each is required if you want the interaction to work. Components are designated in the following way: they'll have <span class="inline_code">data-ur-{interaction}-component="thing"</span>.</p>
-      <p>Most of the interactions also have some extra options. For example, <a href="/interactions/carousel.html"> carousel</a> has an optional <span class="inline_code">data-ur-carousel-component="count"</span>, which is used to display the count of the currently selected item in a carousel.</p>
+      <p>Every interaction has at its core a set and a series of components. The set is unique for every interaction: <code>data-ur-set="toggler"</code> for the <a href="/interactions/toggler.html">toggler</a> interaction, etc. The set attribute should be used to wrap the whole interaction.</p>
+      <p>There are usually a few components per interaction. Some may be required to get the interaction to work, but most are usually optional. For example, a toggler has a button and content, and at least one of each is required if you want the interaction to work. Components are designated in the following way: they'll have <code>data-ur-{interaction}-component="thing"</code>.</p>
+      <p>Most of the interactions also have some extra options. For example, <a href="/interactions/carousel.html"> carousel</a> has an optional <code>data-ur-carousel-component="count"</code>, which is used to display the count of the currently selected item in a carousel.</p>
     </section>
 
     <section id="recommended_styles">
       <h2>Recommended Styles</h2>
       <p>Uranium tries to be as unopinionated as possible when it comes to styling. Uraniun interactions typically perform their magic by adding, removing, or changing the values associated with data attributes on HTML elements. How you choose to style these different states is entirely up to you.</p>
-      <p>That said, there are some basic types of styles that will be needed to see how the Uranium interactions behave. Generally, you are going to want the toggler interaction to toggle whether or not that toggler's content can be seen. One way to do that&mdash;although by no means the only way&mdash;is to have the CSS apply a rule of <span class="inline_code">display:block</span> to toggler content when it is supposed to be seen, and a rule of <span class="inline_code">display:none</span> when it is not supposed to be seen.</p>
+      <p>That said, there are some basic types of styles that will be needed to see how the Uranium interactions behave. Generally, you are going to want the toggler interaction to toggle whether or not that toggler's content can be seen. One way to do that&#8202;&mdash;&#8202;although by no means the only way&#8202;&mdash;&#8202;is to have the CSS apply a rule of <code>display: block</code> to toggler content when it is supposed to be seen, and a rule of <code>display: none</code> when it is not supposed to be seen.</p>
       <p>On the pages describing each of the Uranium interactions, you can see some basic recommended styles that will make that interaction's behavior visible. But those are for demonstration purposes only. Uranium can be used with any CSS you can dream up!</p>
     </section>
 
@@ -91,7 +93,7 @@ documentation_selected: selected
         <li><a href="{{site.url}}philosophy.html">Philosophy</a> &mdash; The guiding philosophy behind Uranium and the interactions we support</li>
         <li><a href="{{site.url}}model.html">Model</a> &mdash; general information about the model on which all the interactions are based</li>
         <li><a href="{{site.url}}styling.html">Styling</a> &mdash; "lazy" and "explicit" styling of interactions</li>
-        <li><a href="{{site.url}}grouping.html">Grouping</a> &mdash; when to use sets and when to use ids</li>
+        <li><a href="{{site.url}}grouping.html">Grouping</a> &mdash; when to use sets and when to use IDs</li>
       </ul>
     </section>
 
