--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -106,24 +106,24 @@ advanced_tab:
         </div>
 
         <div class="interaction_html" data-ur-tabs-component="content" data-ur-tab-id="html">
-          
-{% highlight html %}
-<div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
-  <span data-ur-carousel-component="count"> -- count -- </span>
-  <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
-  <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
-  <div data-ur-carousel-component='scroll_container'>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="1" /> </span>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="2" /> </span>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="3" /> </span>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="4" /> </span>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="5" /> </span>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="6" /> </span>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="7" /> </span>
-    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="8" /> </span>
-  </div>
-</div>
-{% endhighlight %}
+          {% capture tmp %}
+          <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
+            <span data-ur-carousel-component="count"> -- count -- </span>
+            <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
+            <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
+            <div data-ur-carousel-component="scroll_container">
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="1" /></span>
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="2" /></span>
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="3" /></span>
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="4" /></span>
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="5" /></span>
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="6" /></span>
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="7" /></span>
+              <span data-ur-carousel-component="item"><img src="http://placekitten.com/g/200/200" alt="8" /></span>
+            </div>
+          </div>
+          {% endcapture %}
+          <pre data-lang="html">{{ tmp | xml_escape }}</pre>
         </div>
 
       </div>
