--- a/documentation/philosophy.html
+++ b/documentation/philosophy.html
@@ -5,17 +5,17 @@ name: more
 more_selected: selected
 ---
 <div id="page" class="copy">
-  <article class="wrapper">
-    <h1>The Uranium Philosophy</h1>
-    <div id="philosophy">
-      <h2>Uranium is lightweight</h2>
-      <p>Uranium is less than 7KB when zipped. This makes it perfect for mobile devices, where minimizing KB is essential.</p>
-      <p>Uranium was made to work with <a href="http://jquery.com/" target="_blank">jQuery</a>, which is a very popular Javascript library. Many sites already use jQuery, and Uranium is compatible with jQuery versions as old as 1.3, allowing Uranium to integrate easily without adding a lot of extra weight. Uranium endorses the use of jQuery to add robust functionality, and improve cross-browser compatability.</p>
-      <h2>Uranium is easy to use</h2>
-      <p>No Javascript knowledge is necessary to use Uranium. (Of course, if you do know Javascript, it allows you to play around with the interactions.) </p>
-      <p>That's right: you don't need to touch a single line of Javascript. Uranium uses the 'declarative' Javascript style, a model that looks for how HTML elements are formatted. Then, it constructs all the necessary Javascript magic to make those elements come to life.</p>
-      <h2>Uranium is not designed for executing logic or site functions</h2>
-      <p>Uranium makes the view (your UI/UX) rely on the model (your HTML). The declarative aspect is not designed for performing functions. You wouldn't want to add attributes to an element to perform some js logic (this is exactly why 'onclicks' should be avoided) - thats what events/listeners/callbacks are for.</p>
-    </div>
-  </article>
+  <h1>The Uranium Philosophy</h1>
+  <div id="philosophy">
+    <h2>Uranium is lightweight</h2>
+    <p>Uranium is less than 7KB when zipped. This makes it perfect for mobile devices, where minimizing KB is essential.</p>
+    <p>Uranium was made to work with <a href="http://jquery.com/" target="_blank">jQuery</a>, which is a very popular JavaScript library. Many sites already use jQuery, and Uranium is compatible with jQuery versions as old as 1.3, allowing Uranium to integrate easily without adding a lot of extra weight. Uranium endorses the use of jQuery to add robust functionality, and improve cross-browser compatability.</p>
+    
+    <h2>Uranium is easy to use</h2>
+    <p>No JavaScript knowledge is necessary to use Uranium. (Of course, if you do know JavaScript, it allows you to play around with the interactions.) </p>
+    <p>That's right: you don't need to touch a single line of JavaScript. Uranium uses the 'declarative' JavaScript style, a model that looks for how HTML elements are formatted. Then, it constructs all the necessary JavaScript magic to make those elements come to life.</p>
+    
+    <h2>Uranium is not designed for executing logic or site functions</h2>
+    <p>Uranium makes the view (your UI/UX) rely on the model (your HTML). The declarative aspect is not designed for performing functions. You wouldn't want to add attributes to an element to perform some JS logic (this is exactly why "onclicks" should be avoided)&#8202;&mdash;&#8202;that's what events/listeners/callbacks are for.</p>
+  </div>
 </div>
