--- a/documentation/model.html
+++ b/documentation/model.html
@@ -5,29 +5,25 @@ name: model
 more_selected: selected
 ---
 <div id="page" class="copy">
-  <article class="wrapper">
-    <h1>Model</h1>
-    <h2 name="naming">Naming</h2>
-    <div class="model_para">
-      <p>The attributes in Uranium are fairly lengthy. This is because we have chosen to follow the conventions of HTML5.</p>
-      <p>In HTML4, we weren't allowed to create our own attributes for HTML elements, beyond those defined in the specifications. In HTML5, we can create new attributes by extending the data attribute &mdash; but we have to start every attribute with "data". That's why all of Uranium's custom attributes use "data-" at the beginning. After that, we include "ur-" to signify that the attribute we are creating is for Uranium.</p>
-      <p>After those two, the names of the attributes are defined consistently depending on what type of set or component we are defining. For example, a "data-ur-set" element helps define the enclosed set of HTML elements as a unified interaction by grouping them into a set (giving the name of the interaction as a value).</p>
-    </div>
-    <h2 name="declarative_javascript">Declarative Javascript</h2>
-    <div class="model_para">
-      <p>Uranium works with declarative Javascript. What this means is that we give elements in the HTML specific attributes. These attributes tell the Javascript what to do.</p>
-      <p>Here are a couple of simple examples:</p>
-      {% capture tmp %}
-      <div data-ur-set="toggler"></div>
-      {% endcapture %}
-      <pre data-lang="html">{{ tmp | xml_escape }}</pre>
-      <p>This attribute tells JavaScript to treat this <code>&lt;div&gt;</code> as a toggler set.</p>
-      <p>And this:</p>
-      {% capture tmp %}
-      <span data-ur-toggler-component="button" data-ur-state="enabled"></span>
-      {% endcapture %}
-      <pre data-lang="html">{{ tmp | xml_escape }}</pre>
-      <p>tells Uranium to treat the <code>&lt;span&gt;</code> as a toggler button in its enabled state.</p>
-    </div>
-  </article>
+  <h1>Model</h1>
+  
+  <h2 name="naming">Naming</h2>
+  <p>The attributes in Uranium are fairly lengthy. This is because we have chosen to follow the conventions of HTML5.</p>
+  <p>In HTML4, we weren't allowed to create our own attributes for HTML elements, beyond those defined in the specifications. In HTML5, we can create new attributes by extending the data attribute&#8202;&mdash;&#8202;but we have to start every attribute with "data". That's why all of Uranium's custom attributes use "<code>data-</code>" at the beginning. After that, we include "<code>ur-</code>" to signify that the attribute we are creating is for Uranium.</p>
+  <p>After those two, the names of the attributes are defined consistently depending on what type of set or component we are defining. For example, a "<code>data-ur-set</code>" element helps define the enclosed set of HTML elements as a unified interaction by grouping them into a set (giving the name of the interaction as a value).</p>
+  
+  <h2>Declarative Javascript</h2>
+  <p>Uranium works with declarative Javascript. What this means is that we give elements in the HTML specific attributes. These attributes tell the Javascript what to do.</p>
+  <p>Here are a couple of simple examples:</p>
+  {% capture tmp %}
+  <div data-ur-set="toggler"></div>
+  {% endcapture %}
+  <pre data-lang="html">{{ tmp | xml_escape }}</pre>
+  <p>This attribute tells JavaScript to treat this <code>&lt;div&gt;</code> as a toggler set.</p>
+  <p>And this:</p>
+  {% capture tmp %}
+  <span data-ur-toggler-component="button" data-ur-state="enabled"></span>
+  {% endcapture %}
+  <pre data-lang="html">{{ tmp | xml_escape }}</pre>
+  <p>tells Uranium to treat the <code>&lt;span&gt;</code> as a toggler button in its enabled state.</p>
 </div>
